<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:elevation="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?colorPrimary"
            app:expandedTitleMarginBottom="94dp"
            app:expandedTitleTextAppearance="@style/TransparentText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/book_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/bookimage_clicked_description"
                android:scaleType="centerCrop"
                android:src="@drawable/loading"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/photo_background_protection"
                android:fitsSystemWindows="true"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolBarWithNavigationBack"
                android:layout_width="match_parent"
                android:fitsSystemWindows="true"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/book_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/book_title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/book_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_vertical"
                            android:minHeight="48dp"
                            android:textColor="@color/pink_dark"
                            tools:text="@string/placeholder_title"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/book_author_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="center_horizontal"
                        android:text="@string/author_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/book_title_layout"/>

                    <TextView
                        android:id="@+id/book_author_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintBaseline_toBaselineOf="@id/book_author_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/book_author_label"
                        tools:text="@string/placeholder_author"/>

                    <TextView
                        android:id="@+id/book_price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/price_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintStart_toStartOf="@id/book_author_label"
                        app:layout_constraintTop_toBottomOf="@+id/book_author_label"/>

                    <TextView
                        android:id="@+id/book_price_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintBaseline_toBaselineOf="@id/book_price_label"
                        app:layout_constraintEnd_toEndOf="@id/book_author_value"
                        app:layout_constraintStart_toStartOf="@+id/book_author_value"
                        tools:text="@string/placeholder_price"/>

                    <TextView
                        android:id="@+id/book_isbn_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/isbn_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintStart_toStartOf="@id/book_price_label"
                        app:layout_constraintTop_toBottomOf="@+id/book_price_label"/>

                    <TextView
                        android:id="@+id/book_isbn_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintBaseline_toBaselineOf="@id/book_isbn_label"
                        app:layout_constraintEnd_toEndOf="@id/book_price_value"
                        app:layout_constraintStart_toStartOf="@+id/book_price_value"
                        tools:text="@string/placeholder_isbn"/>

                    <ImageButton
                        android:id="@+id/share_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/ic_share"
                        android:contentDescription="@string/share_image_desc"
                        android:background="@android:color/transparent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/desc_layout"/>

                    <LinearLayout
                        android:id="@+id/desc_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_12dp"
                        android:background="@color/pink_dark"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/book_isbn_label">

                        <TextView
                            android:id="@+id/book_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="2dp"
                            android:lineSpacingMultiplier="1.5"
                            android:textAlignment="viewStart"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/white"
                            tools:text="@string/placeholder_description"/>
                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/pink_dark"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                tools:text="Error Retrieving Data"/>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:elevation="8dp"
        android:src="@drawable/ic_favorite"
        app:layout_anchor="@id/cardview"
        app:fabSize="mini"
        app:layout_anchorGravity="top|right|end"/>
</android.support.design.widget.CoordinatorLayout>
